# ai-fake-news-detection-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: main.py
docs/: architecture.md
migrations/: env.py
migrations/versions/: 0fbdd5759c99_create_article_and_analysis_tables.py  acd9bdc17672_create_explanation_and_source_tables.py
scripts/: prepare_dataset.py
tests/: test_config.py  test_database.py  test_dataset_loading.py  test_dataset_preprocessing.py  test_dataset_schemas.py  test_dataset_splitting.py  test_dataset_writing.py  test_health.py  test_ml_evaluation.py  test_ml_package.py  test_ml_training.py  test_models.py  test_prepare_dataset_script.py  test_repositories.py
